--- a/QLPhongMachTuWPF/View/AddAppointment.xaml
+++ b/QLPhongMachTuWPF/View/AddAppointment.xaml
@@ -123,14 +123,21 @@ Grid.Column="1" Panel.ZIndex="1"
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 150 0 0">
                     <!--Date of birth-->
                     <ComboBox Text="{Binding Ngay}" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                             
+                               ItemsSource="{Binding Days}"
+                              SelectedItem="{Binding SelectedDay}"
                                FontSize="16"/>
 
-                    <ComboBox Text="{Binding Thang}" x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Thang}"
+                               ItemsSource="{Binding Months}"
+            SelectedItem="{Binding SelectedMonth}"
+                              x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox Text="{Binding Nam}" x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Nam}" 
+                               ItemsSource="{Binding Years}"
+SelectedItem="{Binding SelectedYear}"
+                              x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
 
@@ -149,20 +156,32 @@ Grid.Column="1" Panel.ZIndex="1"
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 250 0 0">
                     <!--Day appointment-->
-                    <ComboBox Text="{Binding NgayKham}" x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding NgayKham}"
+                               ItemsSource="{Binding DaysApp}"
+SelectedItem="{Binding SelectedDayApp}"
+                              x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
                                FontSize="16"/>
 
-                    <ComboBox Text="{Binding ThangKham}" x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding ThangKham}"
+                              
+                               ItemsSource="{Binding MonthsApp}"
+SelectedItem="{Binding SelectedMonthApp}"
+                              x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox Text="{Binding NamKham}" x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding NamKham}"
+                               ItemsSource="{Binding YearsApp}"
+                                SelectedItem="{Binding SelectedYearApp}"
+                              x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
                     <ComboBox
-                        Text="{Binding Gender}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        Text="{Binding Gender}"
+                        ItemsSource="{Binding GenderSource  }"
+                        x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
            FontSize="16" Margin="60 0 0 0"/>
 
@@ -171,14 +190,16 @@ Grid.Column="1" Panel.ZIndex="1"
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 350 0 0">
                     <!--Day appointment-->
-                    <TextBox
-                        Text="{Binding TenNV}"
-                        VerticalAlignment="Center"
-            materialDesign:HintAssist.Hint="Staff Name"
-            Style="{StaticResource MaterialDesignOutlinedTextBox}"
-            Width="250" FontSize="16"/>
+                    <ComboBox Text="{Binding TenNV, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                              ItemsSource="{Binding ListStaff}" DisplayMemberPath="TenNV" VerticalAlignment="Center"  x:Name="cmbStaff" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+         
+FontSize="16"  Margin="60 0 0 0"/>
 
-                    <ComboBox Text="{Binding Status}"  x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+
+                    <ComboBox Text="{Binding Status}" 
+                              ItemsSource="{Binding StatusSource}"
+
+                              x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
 FontSize="16" Margin="60 0 0 0"/>
 
